<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/todo_app"
        android:textSize="30sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_new_todo"
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginBottom="40dp" />

    <EditText
        android:id="@+id/etTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_todo"
        android:inputType="textCapSentences"
        android:maxLines="2"
        android:padding="14dp" />

    <Button
        android:id="@+id/btnAddTodo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_todo"
        android:layout_marginTop="20dp" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <Button
        android:id="@+id/btnViewTodos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/view_todos"
        android:layout_marginBottom="20dp" />

</LinearLayout>